--- a/templates/front/includes/nav.html.twig
+++ b/templates/front/includes/nav.html.twig
@@ -18,7 +18,7 @@
 			</div>
 			<div class="menu" id="menu">
 				<ul class="menu-inner">
-					<li class="menu-item {{ app.request.get('_route') == 'front_home' ? 'active' : '' }} d-lg-none">
+					<li class="menu-item {{ app.request.get('_route') == 'front_home' ? 'active' : '' }}">
 						<a class="nav-link" href="{{ url('front_home') }}">Accueil</a>
 					</li>
 
@@ -40,7 +40,7 @@
 						</li>
 					{% endif %}
 					{% if app.user %}
-						<li class="menu-item {{ app.request.get('_route') == 'front_profile' ? 'active' : '' }}">
+						<li class="menu-item {{ app.request.get('_route') == 'front_assistance' ? 'active' : '' }}">
 							<a class="btn btn-info" href="{{ url('front_assistance') }}">Profil</a>
 						</li>
 						<li class="menu-item {{ app.request.get('_route') == 'front_profile_project' ? 'active' : '' }}">
