--- a/templates/front/profil/user_response_subject.html.twig
+++ b/templates/front/profil/user_response_subject.html.twig
@@ -40,7 +40,7 @@
 
                     <nav class="page-menu-nav">
                         <ul class="page-menu-container">
-                            <li class="page-menu-item"><a href="{{ url('front_profile') }}"><div>Profil</div></a></li>
+                            <li class="page-menu-item"><a href="{{ url('front_assistance') }}"><div>Profil</div></a></li>
                             <li class="page-menu-item"><a href="{{ url('front_user_subject', {id: app.user.id}) }}"><div>Sujets abordés</div></a>
                             </li>
                             <li class="page-menu-item current"><a href="#"><div>Réponses créées</div></a></li>
