--- a/templates/front/home/index.html.twig
+++ b/templates/front/home/index.html.twig
@@ -15,7 +15,7 @@
 
 
 	<!-- Hero 4 - Bootstrap Brain Component -->
-	<section class="bg-intro vh-100">
+	<section class="bg-primary vh-100">
 		<div class="container-fluid overflow-hidden">
 			<div class="row">
 				<div class="col-12 col-md-12 order-1 order-md-0 align-self-md-end">
@@ -27,7 +27,7 @@
 									<p class="fs-5 mb-5 text-white">En optant pour nos services sur notre plateforme, vous bénéficierez d'un ensemble d'outils de gestion de serveur pour superviser efficacement vos applications en temps réel. Vous aurez également la possibilité de télécharger votre demande dans un format PDF pour une consultation pratique.</p>
 								</div>
 								<div class="col-md-6 col-xxl-6">
-									<p class="fs-5 mb-5 text-white">Chez ScriptzenIT, notre expertise en développement web ne se limite pas à la conception d'un site professionnel et séduisant. Nous nous engageons à vous accompagner au-delà de cette première phase, afin de garantir l'excellence de votre projet. Découvrez nos réalisations pour vous inspirer davantage vers la concrétisation de vos ambitions.</p>
+									<p class="fs-5 mb-5 text-white">Chez ScriptzenIT, notre expertise en développement web ne se limite pas à la conception d'un site professionnel et séduisant.</p><hr>
 								</div>
 								<div class="d-grid gap-2 d-sm-flex">
 									<a href="{{ url('front_devis_new') }}" class="btn btn-warning bsb-btn-2xl rounded-pill">Réaliser votre demande maintenant</a>
@@ -41,7 +41,7 @@
 	</section>
 
 	{#<main>
-		<div class="px-4 pt-5 my-5 text-center border-bottom bg-home-image" style="height: 100vh;">
+		<div class="px-4 pt-5 my-5 text-center border-bottom bg-info" style="height: 100vh;">
 			<h1 class="display-4 fw-bold text-body-emphasis text-white"></h1>
 			<div class="col-lg-6 mx-auto">
 				<p class="text-white rounded"></p>
