--- a/templates/front/includes/nav.html.twig
+++ b/templates/front/includes/nav.html.twig
@@ -18,11 +18,10 @@
 			</div>
 			<div class="menu" id="menu">
 				<ul class="menu-inner">
-					<li class="menu-item {{ app.request.get('_route') == 'front_home' ? 'active' : '' }}">
-						<a class="nav-link" href="{{ url('front_home') }}">Accueil</a>
-					</li>
-
-					<li class="menu-item {{ app.request.get('_route') == 'front_member_index' ? 'active' : '' }} d-lg-none">
+                	<li class="menu-item {{ app.request.get('_route') == 'front_home' ? 'active' : '' }}">
+                    	<a class="nav-link" href="{{ url('front_home') }}">Accueil</a>
+                    </li>
+                    <li class="menu-item {{ app.request.get('_route') == 'front_member_index' ? 'active' : '' }}">
 						<a class="nav-link" href="{{ url('front_member_index') }}">A propos</a>
 					</li>
 					<li class="menu-item {{ app.request.get('_route') == 'front_project' ? 'active' : '' }}">
@@ -57,7 +56,6 @@
 					{% endif %}
 				</ul>
 			</div>
-			{#<button id="switch">Dark mode</button>#}
 		</nav>
 	</header>
 </div>
