--- a/templates/front/ticket/index.html.twig
+++ b/templates/front/ticket/index.html.twig
@@ -1,80 +1,54 @@
-{% extends "base.html.twig" %}
+{% extends 'base_back.html.twig' %}
 
-{% block title %}
-	Assistance
-{% endblock %}
+{% block title %}Back Ticket{% endblock %}
 
 {% block content %}
-	<div class="container">
-		{% for type, messages in app.flashes %}
-			{% for message in messages %}
-				<div class="alert alert-{{ type }}">{{ message }}</div>
-			{% endfor %}
-		{% endfor %}
-	</div>
-
-	<div class="container">
-		<h1 class="text-center">Liste des tickets</h1>
-
-		{% if tickets is empty %}
-			<div class="d-flex flex-column align-items-center">
-				<p class="text-center">Aucun ticket actif pour le moment.</p>
-				<a href="{{ url('send_message', {id: app.user.id}) }}" class="btn btn-outline-primary" style="margin-right: 10px;">Créer un nouveau ticket</a>
-				<br>
-				<a href="{{ url('front_assistance') }}">
-					<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-arrow-return-left" viewBox="0 0 16 16">
-						<path fill-rule="evenodd" d="M14.5 1.5a.5.5 0 0 1 .5.5v4.8a2.5 2.5 0 0 1-2.5 2.5H2.707l3.347 3.346a.5.5 0 0 1-.708.708l-4.2-4.2a.5.5 0 0 1 0-.708l4-4a.5.5 0 1 1 .708.708L2.707 8.3H12.5A1.5 1.5 0 0 0 14 6.8V2a.5.5 0 0 1 .5-.5z"/>
-					</svg>
-					Retour en arrière
-				</a>
-			</div>
-		{% else %}
-			<ul>
-				{% for ticket in tickets %}
-					<div class="container">
-						<div class="position-relative p-5 text-center text-muted bg-body border border-dashed rounded-5">
-							<a href="{{ url('respond_to_ticket', {'id': ticket.id}) }}" class="btn btn-success">Répondre</a>
-							<!-- Formulaire de suppression pour le ticket -->
-							<form action="{{ path('front_delete_ticket', {'id': ticket.id}) }}" method="post" onsubmit="return confirm('Êtes-vous sûr de vouloir supprimer ce ticket ?');">
-								<!-- Bouton de fermeture qui va maintenant servir à supprimer le ticket -->
-								{#
-								<button type="submit" class="position-absolute top-0 end-0 p-3 m-3 btn-close bg-secondary rounded-pill" aria-label="Supprimer le ticket"></button>
-								#}
-
-								<input type="hidden" name="_token" value="{{ csrf_token('delete' ~ ticket.id) }}">
-
-								<svg class="bi mt-5 mb-3" width="48" height="48"><use xlink:href="#check2-circle"/></svg>
-								{% if ticket.status == 'en_cours' %}
-									<h1 class="text-body-emphasis">Réponse du support </h1>
-								{% else %}
-									<h1 class="text-body-emphasis">Message de votre part </h1>
-								{% endif %}
-								<p class="col-lg-6 mx-auto mb-4">
-									{{ ticket.getContent() }}
-								</p>
-								<hr>
-								<h6>Priorité de la demande</h6>
-								<p class="col-lg-6 mx-auto mb-4">
-									{{ ticket.getPriority }}
-								</p>
-								<h6>
-									Date de création
-								</h6>
-								<p class="col-lg-6 mx-auto mb-4">
-									{{ ticket.createdAt|date('Y-m-d H:i:s') }}
-								</p>
-
-								<!-- Si vous souhaitez toujours avoir un bouton "Supprimer" visible -->
-								<button type="submit" class="btn-primary">Supprimer le message</button>
-							</form>
-							{% if ticket.attachment %}
-								<a href="{{ asset('uploads/support/' ~ ticket.attachment) }}" target="_blank" class="btn btn-info">Voir le fichier joint</a>
-							{% endif %}
-						</div>
-					</div>
-				{% endfor %}
-			</ul>
-		{% endif %}
-	</div>
+    <div class="container-fluid">
+        <div class="table-responsive table-responsive-lg table-responsive-md">
+            <table>
+                <thead class="thead-dark table table-sm">
+                <tr>
+                    <th>Numéro</th>
+                    <th>Email</th>
+                    <th>Type de site web</th>
+                    <th>Type de design</th>
+                    <th>Description de la demande</th>
+                    <th>Date de création</th>
+                    <th>Status</th>
+                    <th>Actions</th>
+                </tr>
+                </thead>
+                <tbody>
+                {% for message in tickets %}
+                    <tr>
+                        <td>{{ message.id }}</td>
+                        <td>{{ message.sender }}</td>
+                        <td>{{ message.devis.typeDeSiteWeb }}</td>
+                        {% for labelOfDesign in message.devis.attentesDesignWeb %}
+                            <td>{{ labelOfDesign.label }}</td>
+                        {% endfor %}
+                        <td>{{ message.content }}</td>
+                        <td>{{ message.createdAt|date('Y-m-d H:i:s') }}</td>
+                        <td>{{ message.status }}</td>
+                        <td>
+                            <a href="{{ path('back_respond_to_ticket', {'id': message.id}) }}" class="btn btn-outline-primary">
+                                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-folder-plus" viewBox="0 0 16 16">
+                                    <path d="m.5 3 .04.87a1.99 1.99 0 0 0-.342 1.311l.637 7A2 2 0 0 0 2.826 14H9v-1H2.826a1 1 0 0 1-.995-.91l-.637-7A1 1 0 0 1 2.19 4h11.62a1 1 0 0 1 .996 1.09L14.54 8h1.005l.256-2.819A2 2 0 0 0 13.81 3H9.828a2 2 0 0 1-1.414-.586l-.828-.828A2 2 0 0 0 6.172 1H2.5a2 2 0 0 0-2 2Zm5.672-1a1 1 0 0 1 .707.293L7.586 3H2.19c-.24 0-.47.042-.683.12L1.5 2.98a1 1 0 0 1 1-.98h3.672Z"/>
+                                    <path d="M13.5 9a.5.5 0 0 1 .5.5V11h1.5a.5.5 0 1 1 0 1H14v1.5a.5.5 0 1 1-1 0V12h-1.5a.5.5 0 0 1 0-1H13V9.5a.5.5 0 0 1 .5-.5Z"/>
+                                </svg>
+                            </a>
+                            <a href="{{ path('back_show_ticket', {'id': message.id}) }}" class="btn btn-outline-secondary">
+                                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-send-plus" viewBox="0 0 16 16">
+                                    <path d="M15.964.686a.5.5 0 0 0-.65-.65L.767 5.855a.75.75 0 0 0-.124 1.329l4.995 3.178 1.531 2.406a.5.5 0 0 0 .844-.536L6.637 10.07l7.494-7.494-1.895 4.738a.5.5 0 1 0 .928.372l2.8-7Zm-2.54 1.183L5.93 9.363 1.591 6.602l11.833-4.733Z"/>
+                                    <path d="M16 12.5a3.5 3.5 0 1 1-7 0 3.5 3.5 0 0 1 7 0Zm-3.5-2a.5.5 0 0 0-.5.5v1h-1a.5.5 0 0 0 0 1h1v1a.5.5 0 0 0 1 0v-1h1a.5.5 0 0 0 0-1h-1v-1a.5.5 0 0 0-.5-.5Z"/>
+                                </svg>
+                            </a>
+                        </td>
+                    </tr>
+                {% endfor %}
+                </tbody>
+            </table>
+        </div>
+    </div>
 
 {% endblock %}
