--- a/templates/front/includes/nav.html.twig
+++ b/templates/front/includes/nav.html.twig
@@ -1,4 +1,4 @@
-<div>
+<div class="mb-4">
 	<header id="header" style="margin-bottom: 3rem !important;margin-top: 3px;!important">
 		<nav class="navbar navbar-expand-lg fixed-top container text-dark mt-top-logo" style="background-color: #ffffff;">
 			<!-- Text Logo -->
