--- a/templates/front/ticket/create_message.html.twig
+++ b/templates/front/ticket/create_message.html.twig
@@ -23,8 +23,8 @@
 				{{ form_errors(form.status) }}
 			</div>
 			<div>
-				{{ form_row(form.sender)}}
-				{{ form_errors(form.sender) }}
+				{{ form_row(form.receiver)}}
+				{{ form_errors(form.receiver) }}
 			</div>
 			<div>
 				{{ form_row(form.devis) }}
