--- a/templates/front/ticket/index.html.twig
+++ b/templates/front/ticket/index.html.twig
@@ -1,12 +1,12 @@
 {% extends 'base_back.html.twig' %}
 
-{% block title %}Back Ticket{% endblock %}
+{% block title %}Gestion tickets{% endblock %}
 
 {% block content %}
     <div class="container-fluid">
         <div class="table-responsive table-responsive-lg table-responsive-md">
-            <table>
-                <thead class="thead-dark table table-sm">
+            <table class="table table-sm">
+                <thead class="thead-dark">
                 <tr>
                     <th>Numéro</th>
                     <th>Email</th>
@@ -24,23 +24,19 @@
                         <td>{{ message.id }}</td>
                         <td>{{ message.sender }}</td>
                         <td>{{ message.devis.typeDeSiteWeb }}</td>
-                        {% for labelOfDesign in message.devis.attentesDesignWeb %}
-                            <td>{{ labelOfDesign.label }}</td>
-                        {% endfor %}
+                        <td>
+                            {% for labelOfDesign in message.devis.attentesDesignWeb %}
+                                {{ labelOfDesign.label }}{% if not loop.last %}, {% endif %}
+                            {% endfor %}
+                        </td>
                         <td>{{ message.content }}</td>
                         <td>{{ message.createdAt|date('Y-m-d H:i:s') }}</td>
                         <td>{{ message.status }}</td>
                         <td>
-                            <a href="{{ path('back_respond_to_ticket', {'id': message.id}) }}" class="btn btn-outline-primary">
+                            <a href="{{ path('respond_to_ticket', {'id': message.id}) }}" class="btn btn-outline-primary">
                                 <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-folder-plus" viewBox="0 0 16 16">
                                     <path d="m.5 3 .04.87a1.99 1.99 0 0 0-.342 1.311l.637 7A2 2 0 0 0 2.826 14H9v-1H2.826a1 1 0 0 1-.995-.91l-.637-7A1 1 0 0 1 2.19 4h11.62a1 1 0 0 1 .996 1.09L14.54 8h1.005l.256-2.819A2 2 0 0 0 13.81 3H9.828a2 2 0 0 1-1.414-.586l-.828-.828A2 2 0 0 0 6.172 1H2.5a2 2 0 0 0-2 2Zm5.672-1a1 1 0 0 1 .707.293L7.586 3H2.19c-.24 0-.47.042-.683.12L1.5 2.98a1 1 0 0 1 1-.98h3.672Z"/>
                                     <path d="M13.5 9a.5.5 0 0 1 .5.5V11h1.5a.5.5 0 1 1 0 1H14v1.5a.5.5 0 1 1-1 0V12h-1.5a.5.5 0 0 1 0-1H13V9.5a.5.5 0 0 1 .5-.5Z"/>
-                                </svg>
-                            </a>
-                            <a href="{{ path('back_show_ticket', {'id': message.id}) }}" class="btn btn-outline-secondary">
-                                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-send-plus" viewBox="0 0 16 16">
-                                    <path d="M15.964.686a.5.5 0 0 0-.65-.65L.767 5.855a.75.75 0 0 0-.124 1.329l4.995 3.178 1.531 2.406a.5.5 0 0 0 .844-.536L6.637 10.07l7.494-7.494-1.895 4.738a.5.5 0 1 0 .928.372l2.8-7Zm-2.54 1.183L5.93 9.363 1.591 6.602l11.833-4.733Z"/>
-                                    <path d="M16 12.5a3.5 3.5 0 1 1-7 0 3.5 3.5 0 0 1 7 0Zm-3.5-2a.5.5 0 0 0-.5.5v1h-1a.5.5 0 0 0 0 1h1v1a.5.5 0 0 0 1 0v-1h1a.5.5 0 0 0 0-1h-1v-1a.5.5 0 0 0-.5-.5Z"/>
                                 </svg>
                             </a>
                         </td>
@@ -50,5 +46,4 @@
             </table>
         </div>
     </div>
-
 {% endblock %}
