wip fixing member page

--- a/templates/back/member/edit.html.twig
+++ b/templates/back/member/edit.html.twig
@@ -14,6 +14,7 @@
 		{{ form_row(form.description) }}
 		{{ form_row(form.avatar) }}
 		{{ form_row(form.email) }}
+		{{ form_row(form.category) }}
 		<button type="submit">Mettre à jours</button>
 		{{ form_end(form) }}
 
