--- a/templates/back/member/new.html.twig
+++ b/templates/back/member/new.html.twig
@@ -14,6 +14,7 @@
 		{{ form_row(form.description) }}
 		{{ form_row(form.avatar) }}
 		{{ form_row(form.email) }}
+		{{ form_row(form.category) }}
 		<button type="submit">Créer</button>
 		{{ form_end(form) }}
 
